ts package export testing

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "http-client",
-  "version": "0.0.1",
+  "author": {
+    "name": "Jenne van der Meer",
+    "email": "jennevdmeer@impulze.net"
+  },
   "description": "Basic minimal HttpClient lib, making use of old school XMLHttpRequest instead of fetch because it has better support and has more functionality.",
-  "main": "src/HttpClient.ts",
-  "author": "Jenne van der Meer <jennevdmeer@impulze.net>",
   "license": "ISC",
-  "devDependencies": {
-    "typescript": "^3.9.6"
+  "name": "http-client",
+  "main": "dist/HttpClient.ts",
+  "types": "dist/HttpClient.d.ts",
+  "version": "0.0.1",
+  "scripts": {
+    "prepublish": "tsc"
   }
 }
