--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
-        "sourceMap": true
+        "sourceMap": true,
+        "declaration": true,
+        "outDir": "./dist"
     },
     "exclude": [
         "node_modules"
