--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Basic minimal HttpClient lib, making use of old school XMLHttpRequest instead of fetch because it has better support and has more functionality.",
   "license": "ISC",
   "name": "http-client",
-  "main": "dist/HttpClient.ts",
+  "main": "dist/HttpClient.js",
   "types": "dist/HttpClient.d.ts",
   "version": "0.0.1",
   "scripts": {
