--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,5 @@
         "declaration": true,
         "outDir": "./dist"
     },
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+    "include": ["src/**/*"]
 }
